syntax = "proto3";

option java_package = "com.denyskostetskyi.datastoring.proto";
option java_multiple_files = true;

message UserProto {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
}
